--- a/bug/pubspec.yaml
+++ b/bug/pubspec.yaml
@@ -1,4 +1,4 @@
-name: listeler
+name: bug
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -28,9 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  fluttertoast: ^7.1.1
-  date_format: ^1.0.9
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -47,8 +45,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/image/cats.png
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
